Add: Accessibility to the Scenic Arts

--- a/courses.html
+++ b/courses.html
@@ -233,6 +233,11 @@
         (12.09.2016).
       </li>
       <li>
+        <a href="https://www.coursera.org/learn/accessibility-scenic-arts">Accessibility to the Scenic Arts</a>
+        is a <abbr>MOOC</abbr> by the <span lang="ca">Universitat Autònoma de Barcelona</span>.
+        It requires an estimated 21 hours to complete (or four hours per week).
+      </li>
+      <li>
         <a href="https://www.coursera.org/learn/disability-awareness">Disability Awareness and Support</a>
         is a four-week course by the University of Pittsburgh hosted on Coursera. According to the course description,
         <q>The goal of this course is to promote equal opportunity and the full participation of students with disabilities in higher education by helping participants advance their awareness of the meaning of accessibility in education.</q>
