--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -160,9 +160,17 @@
       <li><span lang="de"><a href="https://www.ionos.de/digitalguide/websites/web-entwicklung/screenreader/" hreflang="de">Alles über Screenreader: Blind am Computer arbeiten</a>,
         <i class="website">IONOS</i></span>, 13.04.2018.
       </li>
-    <!--
-      * Oracle: Orca Screen Reader and Magnifier [Oracle Solaris 11 Accessibility Guide for the GNOME Desktop]: https://docs.oracle.com/cd/E23824_01/html/E24675/ats-2.html 
-    -->
+      <li>
+        <a href="https://www.youtube.com/watch?v=vAcYipyXGvc">Word and <abbr>NVDA</abbr> screen reader demonstration</a>,
+        <i class="ytchannel">eLaHub</i> on YouTube, 8 minutes, 06.02.2019.
+        <br />This video show how screen reader short cuts can be used to navigate a document's headings,
+        how alternative text can be added to images and tables, how <abbr>NVDA</abbr> reads these text alternatives
+        and finally shows how text-to-speech software such as Read Aloud does not recognise headers
+        and ignores the text alternatives for images and tables.
+      </li>
+      <!--
+        * Oracle: Orca Screen Reader and Magnifier [Oracle Solaris 11 Accessibility Guide for the GNOME Desktop]: https://docs.oracle.com/cd/E23824_01/html/E24675/ats-2.html 
+      -->
     </ul>
 
 
