Add: Lockwood: Using NVDA Screen Reader on Windows

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -168,8 +168,12 @@
         and finally shows how text-to-speech software such as Read Aloud does not recognise headers
         and ignores the text alternatives for images and tables.
       </li>
+      <li>Lockwood, Sue:
+        <a href="https://bocoup.com/blog/using-nvda-screen-reader-on-windows">Using <abbr>NVDA</abbr> Screen Reader on Windows</a>,
+        <i class="website">Bocoup</i>, 21.03.2017.
+      </li>
       <!--
-        * Oracle: Orca Screen Reader and Magnifier [Oracle Solaris 11 Accessibility Guide for the GNOME Desktop]: https://docs.oracle.com/cd/E23824_01/html/E24675/ats-2.html 
+        * Oracle: Orca Screen Reader and Magnifier [Oracle Solaris 11 Accessibility Guide for the GNOME Desktop]: https://docs.oracle.com/cd/E23824_01/html/E24675/ats-2.html
       -->
     </ul>
 
