Add: New Tools for Inclusion of Dyslexic studEnts. Good practices towards guidance

--- a/courses.html
+++ b/courses.html
@@ -320,6 +320,10 @@
         is a 10-week course by Northern Illinois University hosted on Blackboard Learn.
         The course first ran in 2014 and is now available as a self-paced course. 
       </li>
+      <li>
+        <a href="https://learn.eduopen.org/eduopenv2/course_details.php?courseid=348">New Tools for Inclusion of Dyslexic studEnts. Good practices towards guidance</a>
+        is a course by the <span lang="it">Università di Modena e Reggio Emilia</span> that is hosted on EduOpen.
+      </li>
     </ul>
 
 
