Add: How do I make VoiceOver read paragraphs in InDesign-created PDF without pausing on each line?

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -248,7 +248,11 @@
         Accordingly, neither <abbr>PDF</abbr> nor Word can currently be considered accessibility supported technologies for the purpose of conformance with the NZ Government Web Accessibility Standard.</blockquote>
         <blockquote>Unfortunately, both <abbr>PDF</abbr> and Word documents have very limited accessibility support on the Mac <abbr>OS</abbr> and Linux platforms for screen reader users.
         For instance, in Mac <abbr>OS</abbr>, the VoiceOver screen reader does not communicate to users the semantic structure (<abbr>e.g.</abbr> what's a heading, what's a table column header, <abbr>etc.</abbr>) that otherwise accessible Word or tagged <abbr>PDF</abbr> documents contain.
-        Similar screen reader support issues with PDF and Word documents exist on mobile platforms, i<abbr>OS</abbr> and Android.</blockquote>
+        Similar screen reader support issues with <abbr>PDF</abbr> and Word documents exist on mobile platforms, i<abbr>OS</abbr> and Android.</blockquote>
+      </li>
+      <li>
+        <a href="https://stackoverflow.com/q/56655218/6002174">How do I make VoiceOver read paragraphs in InDesign-created PDF without pausing on each line?</a>
+        This question was posted on Stack Overflow on 18 June 2019 and had not yet received any answers by mid October 2019.
       </li>
     </ul>
 
