Add: Vision Accessibility  - Mac

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -228,6 +228,7 @@
       </li>
       <!-- https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/ -->
     </ul>
+    <!-- https://duckduckgo.com/?q=%22word+2016%22+tagged+pdf+%22how+to%22+accessible&t=ffab&ia=web -->
 
     <p>Support for tagged <abbr>PDF</abbr> on Mac <abbr>OS</abbr> has long been poor:</p>
     <ul>
@@ -253,6 +254,15 @@
       <li>
         <a href="https://stackoverflow.com/q/56655218/6002174">How do I make VoiceOver read paragraphs in InDesign-created PDF without pausing on each line?</a>
         This question was posted on Stack Overflow on 18 June 2019 and had not yet received any answers by mid October 2019.
+      </li>
+      <li>
+        <a href="https://www.apple.com/accessibility/mac/vision/">Vision Accessibility &ndash; Mac</a>,
+        <i class="website">Apple</i>, no date; accessed 16.10.2019.
+        <br />Quote:
+        <q>We’ve refined VoiceOver to make it easier to navigate <abbr>PDF</abbr>s, websites, and messages.
+        In Safari, improved conformance with <abbr>HTML</abbr>5 accessibility standards allows for more consistent navigation of websites.
+        VoiceOver is now better at reading aloud tagged <abbr>PDF</abbr>s and email messages.</q>
+        <!--Also contains link to VoiceOver User Guide for macOS Catalina: https://help.apple.com/voiceover/mac/10.15/ -->
       </li>
     </ul>
 
