Add: Johnson: Apple tags PDF

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -264,6 +264,18 @@
         VoiceOver is now better at reading aloud tagged <abbr>PDF</abbr>s and email messages.</q>
         <!--Also contains link to VoiceOver User Guide for macOS Catalina: https://help.apple.com/voiceover/mac/10.15/ -->
       </li>
+      <li>Johnson, Duff:
+        <a href="https://www.pdfa.org/apple-tags-pdf/">Apple tags <abbr>PDF</abbr></a>,
+        <i class="website"><abbr>PDF</abbr> Association</i>, 13.11.2019.
+      </li>
+      <!--https://mosen.org/saying-goodbye-to-the-mac/
+        comment by Sam, 24/11/2016 (10:30 am):
+          "I question the objectivity of some points of this piece. For example, Adobe Reader DC now makes tagged PDF documents accessible on the Mac. (...)
+          Microsoft has also made significant strides to make Office more accessible on the Mac as well (...)."
+        Response by Jonathan Mosen:
+          "Regarding Adobe DC, comment was made on Twitter earlier in the week by people other than me that this still didn’t provide the same kind of accessibility that is available in Windows.
+          I have Microsoft office 365, so have also been working with that in MacOS. It’s good to see Microsoft have finally done the right thing here, but shortcomings of VoiceOver itself mean that you still don’t have the same ability to do the kind of thorough review and efficient navigation of large files that JAWS offers. I do find it a better experience than Pages though."
+      -->
     </ul>
 
     <h2 id="audio-video">Audio and Video</h2>
