Add: MSFTEnable: PDF Accessibility

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -188,6 +188,15 @@
         is the informal name for
         <a href="http://www.iso.org/iso/iso_catalogue/catalogue_tc/catalogue_detail.htm?csnumber=64599">ISO 14289</a>.
       </li>
+      <li><abbr>MSFT</abbr>Enable:
+        <a href="https://www.youtube.com/playlist?list=PLtSVUgxIo6KrxMh-wNhSG7MuZ2gfPf7co"><abbr>PDF</abbr> Accessibility</a>
+        (YouTube, January 2019).
+        This is a playlist containing of 10 videos that are between two and four minutes long. See for example
+        <a href="https://www.youtube.com/watch?v=tD-WPqHrY2M"><abbr>PDF</abbr> Accessibility: Tagged <abbr>PDF</abbr></a>
+        (YouTube, 2 minutes, 28.01.2019) and
+        <a href="https://www.youtube.com/watch?v=KUFPtk9jU5I"><abbr>PDF</abbr> Accessibility: Images</a>
+        (YouTube, 2 minutes, 28.01.2019).
+      </li>
       <li><abbr title="PDF Accessibility Validation Engine">PAVE</abbr>: 
         <a href="http://pave-pdf.org/index.en.html">Validate and Fix <abbr>PDF</abbr> Accessibility</a>:
         this site has an online <abbr>PDF</abbr> accessibility checker.
