--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -197,6 +197,11 @@
         <a href="https://www.youtube.com/watch?v=KUFPtk9jU5I"><abbr>PDF</abbr> Accessibility: Images</a>
         (YouTube, 2 minutes, 28.01.2019).
       </li>
+      <li><a href="https://www.youtube.com/playlist?list=PLmOpWSVPFcxqaWGcKotFiNHYuHSd5gbs0">Creating Accessible <abbr>PDF</abbr> files</a>
+        (<i class="ytchannel">Points of Access with Philip White</i> on YouTube, 2019):
+        this is a YouTube playlist containing videos on topics such as editing <abbr>OCR</abbr> done in Adobe Acrobat,
+        tagging <abbr>PDF</abbr> and basic accessibility checking.
+      </li>
       <li><abbr title="PDF Accessibility Validation Engine">PAVE</abbr>: 
         <a href="http://pave-pdf.org/index.en.html">Validate and Fix <abbr>PDF</abbr> Accessibility</a>:
         this site has an online <abbr>PDF</abbr> accessibility checker.
