Add: Creating Accessible Tables in PDF files

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -202,6 +202,10 @@
         this is a YouTube playlist containing videos on topics such as editing <abbr>OCR</abbr> done in Adobe Acrobat,
         tagging <abbr>PDF</abbr> and basic accessibility checking.
       </li>
+      <li><a href="https://www.youtube.com/playlist?list=PLmOpWSVPFcxoDdvHhkK10EPrBcR-nUekq">Creating Accessible Tables in <abbr>PDF</abbr> Files</a>
+        (<i class="ytchannel">Points of Access with Philip White</i> on YouTube, 2019):
+        this is a YouTube playlist containing videos on fixing <abbr>PDF</abbr> tables and fixing reading order.
+      </li>
       <li><abbr title="PDF Accessibility Validation Engine">PAVE</abbr>: 
         <a href="http://pave-pdf.org/index.en.html">Validate and Fix <abbr>PDF</abbr> Accessibility</a>:
         this site has an online <abbr>PDF</abbr> accessibility checker.
