Add: Points of Access with Philip White: Adobe Acrobat Accessibility series

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -206,6 +206,9 @@
         (<i class="ytchannel">Points of Access with Philip White</i> on YouTube, 2019):
         this is a YouTube playlist containing videos on fixing <abbr>PDF</abbr> tables and fixing reading order.
       </li>
+      <li><a href="https://www.youtube.com/playlist?list=PLmOpWSVPFcxqf4qt20coIdHUr29JhtrFD">Adobe Acrobat Accessibility series</a>
+        (<i class="ytchannel">Points of Access with Philip White</i> on YouTube, 2019).
+      </li>
       <li><abbr title="PDF Accessibility Validation Engine">PAVE</abbr>: 
         <a href="http://pave-pdf.org/index.en.html">Validate and Fix <abbr>PDF</abbr> Accessibility</a>:
         this site has an online <abbr>PDF</abbr> accessibility checker.
