Add: Rivenburgh: The PDF Accessibility Guide: How to Make Your Portable Documents Accessible

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -209,6 +209,11 @@
       <li><a href="https://www.youtube.com/playlist?list=PLmOpWSVPFcxqf4qt20coIdHUr29JhtrFD">Adobe Acrobat Accessibility series</a>
         (<i class="ytchannel">Points of Access with Philip White</i> on YouTube, 2019).
       </li>
+      <li>Rivenburgh, Chris:
+        <a href="https://medium.com/@krisrivenburgh/the-pdf-accessibility-guide-how-to-make-your-portable-documents-accessible-6e77a21a098f">The <abbr>PDF</abbr> Accessibility Guide: How to Make Your Portable Documents Accessible</a>,
+        <i class="blog">Medium</i>, 17.06.2019.
+        <!--@@check links at bottom of page-->
+      </li>
       <li><abbr title="PDF Accessibility Validation Engine">PAVE</abbr>: 
         <a href="http://pave-pdf.org/index.en.html">Validate and Fix <abbr>PDF</abbr> Accessibility</a>:
         this site has an online <abbr>PDF</abbr> accessibility checker.
