Add: Stiftung «Zugang für alle»: PDF Accessibility Checker 3

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -214,6 +214,11 @@
         <i class="blog">Medium</i>, 17.06.2019.
         <!--@@check links at bottom of page-->
       </li>
+      <li><span lang="de">Stiftung «Zugang für alle»:
+        <a href="https://www.access-for-all.ch/ch/pdf-werkstatt/pdf-accessibility-checker-pac.html" hreflang="de"><abbr>PDF</abbr> Accessibility Checker (<abbr>PAC</abbr> 3)</a></span>.
+        This is a <abbr>PDF</abbr> accessibility checker for Microsoft Windows (all versions since Windows Vista).
+        It is a freeware product, but users are not allowed to distribute copies of the software or to automate the accessibility evaluation process.
+      </li>
       <li><abbr title="PDF Accessibility Validation Engine">PAVE</abbr>: 
         <a href="http://pave-pdf.org/index.en.html">Validate and Fix <abbr>PDF</abbr> Accessibility</a>:
         this site has an online <abbr>PDF</abbr> accessibility checker.
