Add: Axes4: PDF fÜr Word

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -219,6 +219,10 @@
         This is a <abbr>PDF</abbr> accessibility checker for Microsoft Windows (all versions since Windows Vista).
         It is a freeware product, but users are not allowed to distribute copies of the software or to automate the accessibility evaluation process.
       </li>
+      <li>
+        <a href="https://www.axes4.com/axespdf-for-word-ueberblick.html" hreflang="de" lang="de">axes<abbr>PDF</abbr> für Word</a>:
+        this is a commercial extension for Microsoft Word (version 2013 or higher) for Windows (Windows 7 or higher with .NET Framework 4.6.2).
+      </li>
       <li><abbr title="PDF Accessibility Validation Engine">PAVE</abbr>: 
         <a href="http://pave-pdf.org/index.en.html">Validate and Fix <abbr>PDF</abbr> Accessibility</a>:
         this site has an online <abbr>PDF</abbr> accessibility checker.
