--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -253,6 +253,10 @@
         <a href="https://www.washington.edu/accessibility/documents/pdf-acrobat/">Fixing Inaccessible <abbr>PDF</abbr>s Using Adobe Acrobat Pro DC</a>
         (no date).
       </li>
+      <li><span lang="de">Bundesfachstelle Barrierefreiheit:
+        <a href="https://www.bundesfachstelle-barrierefreiheit.de/DE/Praxishilfen/Informationstechnik/Barrierefreie-PDF/barrierefreie-pdf_node.html" hreflang="de">Barrierefreie <abbr>PDF</abbr></a></span>
+        (no date). This is a collection of links to resources in German.
+      </li>
       <li>
         <a href="https://itextpdf.com/">iText <abbr>PDF</abbr></a>:
         a <abbr>PDF</abbr> generation library for Java and .NET.
