Add: Posselt: Barrierefreie PDFs und der Umfließen-Modus – ein leidiges Thema

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -257,6 +257,10 @@
         <a href="https://www.bundesfachstelle-barrierefreiheit.de/DE/Praxishilfen/Informationstechnik/Barrierefreie-PDF/barrierefreie-pdf_node.html" hreflang="de">Barrierefreie <abbr>PDF</abbr></a></span>
         (no date). This is a collection of links to resources in German.
       </li>
+      <li><span lang="de">Posselt, Klaas</span>:
+        <a href="https://einmanncombo.de/barrierefreie-pdfs-und-der-umfliessen-modus-ein-lediges-thema/">Barrierefreie <abbr>PDF</abbr>s und der Umfließen-Modus – ein leidiges Thema</a>,
+        <i class="website">*einmanncombo</i>, 29.07.2019.
+      </li>
       <li>
         <a href="https://itextpdf.com/">iText <abbr>PDF</abbr></a>:
         a <abbr>PDF</abbr> generation library for Java and .NET.
