Add: description UWashington: Creating Accessible Videos; other minor edits

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -392,7 +392,7 @@
       </li>
       <li>
         <a href="http://jubler.org/">Jubler Subtitle Editor</a>:
-        open-source tool developed in Java.  (Licence: <abbr>GPL</abbr>.)
+        open-source tool developed in Java. (Licence: <abbr>GPL</abbr>.)
       </li>
       <li>
         <a href="https://github.com/helixarch/subedit">subedit</a>:
@@ -408,14 +408,16 @@
     <ul>
       <li>University of Washington:
         <a href="http://www.washington.edu/accessibility/videos/">Creating Accessible Videos</a>.
+        <br />This document discusses captions, audio description, live captioning, live description, transcripts
+        and choosing an accessible media player (the recommended player is Able Player).
       </li>
       <li>
         <a href="https://carmenwiki.osu.edu/display/10292/Quick+Captioning+with+YouTube">Quick Captioning with YouTube</a>
-        (Carmen Wiki, Office of Distance Education and eLearning, Ohio State University).
+        (<i class="website">Carmen Wiki, Office of Distance Education and eLearning, Ohio State University</i>).
       </li>
       <li>
         <a href="https://carmenwiki.osu.edu/display/10292/DIY+Captioning+Techniques"><abbr title="Do-it-yourself">DIY</abbr> Captioning Techniques</a>
-        (Carmen Wiki, Office of Distance Education and eLearning, Ohio State University).
+        (<i class="website">Carmen Wiki, Office of Distance Education and eLearning, Ohio State University</i>).
       </li>
       <li>3PlayMedia:
         <a href="http://www.3playmedia.com/how-it-works/how-to-guides/captions-powerpoint/">Captions and Subtitles in PowerPoint</a>:
@@ -483,7 +485,9 @@
         audio-described video by Channel 4. (Captions can also be activated.
         There is also a <a href="https://www.youtube.com/watch?v=IocLkk3aYlk">version without audio description</a>.)
       </li>
-      <!-- Prince of Persia trailer with audio description: https://www.youtube.com/watch?v=Ih3Stocb6t8 -->
+      <!-- Prince of Persia trailer with audio description: https://www.youtube.com/watch?v=Ih3Stocb6t8
+        Advisory technique H96: Using the track element to provide audio descriptions: https://www.w3.org/WAI/WCAG21/Techniques/html/H96 & https://www.w3.org/WAI/GL/wiki/Using_the_track_element_to_provide_audio_descriptions
+      -->
     </ul>
 
     <h3 id="media-player">Video or Audio Players</h3>
