Add: Kassuba: How to create structured bookmarks using Acrobat XI

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -261,6 +261,11 @@
         <a href="https://einmanncombo.de/barrierefreie-pdfs-und-der-umfliessen-modus-ein-lediges-thema/">Barrierefreie <abbr>PDF</abbr>s und der Umfließen-Modus – ein leidiges Thema</a>,
         <i class="website">*einmanncombo</i>, 29.07.2019.
       </li>
+      <!--@@also https://duckduckgo.com/?q=umflie%C3%9Fen+pdf+barrierefrei&t=ffab&ia=web -->
+      <li>Kassuba, Lori:
+        <a href="https://acrobatusers.com/tutorials/how-to-create-structured-bookmarks">How to create structured bookmarks using Acrobat XI</a>,
+        <i class="website">Acrobat forum</i>, 07.01.2014.
+      </li>
       <li>
         <a href="https://itextpdf.com/">iText <abbr>PDF</abbr></a>:
         a <abbr>PDF</abbr> generation library for Java and .NET.
