--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -271,6 +271,11 @@
         <i class="blog">AlastairC</i>, 05.01.2011.
       </li>
       <li>
+        <a href="https://www.clarosoftware.com/help/pdfs-and-accessibility/"><abbr>PDF</abbr>s and Accessibility</a>,
+        <i class="website">Claro Software Support</i>, 27.03.2012.
+        <!--Old but still informative. @@download PDF: http://www.clarosoftware.com/pdfs/PDF%20and%20Accessibility.pdf -->
+      </li>
+      <li>
         <a href="https://itextpdf.com/">iText <abbr>PDF</abbr></a>:
         a <abbr>PDF</abbr> generation library for Java and .NET.
         It supports <abbr>PDF XA</abbr> and can convert <abbr>PDF</abbr> to <abbr>HTML</abbr>.
