--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -161,6 +161,10 @@
         <i class="website">IONOS</i></span>, 13.04.2018.
       </li>
       <li>
+        <a href="https://www.freedomscientific.com/products/software/jaws/"><abbr title="Job Access With Speech">JAWS</abbr></a>:
+        a commercial product by Freedom Scientific; possibly the most widely used screen reader for Windows.
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=vAcYipyXGvc">Word and <abbr>NVDA</abbr> screen reader demonstration</a>,
         <i class="ytchannel">eLaHub</i> on YouTube, 8 minutes, 06.02.2019.
         <br />This video show how screen reader short cuts can be used to navigate a document's headings,
