Add: Dolphin ScreenReader

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -165,6 +165,10 @@
         a commercial product by Freedom Scientific; possibly the most widely used screen reader for Windows.
       </li>
       <li>
+        <a href="https://yourdolphin.com/products/individuals/screen-reader">Dolphin ScreenReader</a>:
+        another screen reader for Windows.
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=vAcYipyXGvc">Word and <abbr>NVDA</abbr> screen reader demonstration</a>,
         <i class="ytchannel">eLaHub</i> on YouTube, 8 minutes, 06.02.2019.
         <br />This video show how screen reader short cuts can be used to navigate a document's headings,
