Add: Dolphin SuperNova

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -169,6 +169,10 @@
         another screen reader for Windows.
       </li>
       <li>
+        <a href="https://yourdolphin.com/en-gb/products/individuals/families/supernova">Dolphin SuperNova</a>:
+        a screen reader and magnifier for Windows.
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=vAcYipyXGvc">Word and <abbr>NVDA</abbr> screen reader demonstration</a>,
         <i class="ytchannel">eLaHub</i> on YouTube, 8 minutes, 06.02.2019.
         <br />This video show how screen reader short cuts can be used to navigate a document's headings,
