--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -173,6 +173,11 @@
         a screen reader and magnifier for Windows.
       </li>
       <li>
+        <a href="http://gwmicro.com/"><abbr>GW</abbr> Micro</a>
+        used to offer a screen reade named Window-Eyes, but development was discontinued in 2017:
+        <a href="https://coolblindtech.com/breaking-window-eyes-discontinued-in-the-hands-of-the-vfo-group/">Breaking: Window-eyes discontinued, in the hands of the <abbr>VFO</abbr> Group</a> (03.05.2017).
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=vAcYipyXGvc">Word and <abbr>NVDA</abbr> screen reader demonstration</a>,
         <i class="ytchannel">eLaHub</i> on YouTube, 8 minutes, 06.02.2019.
         <br />This video show how screen reader short cuts can be used to navigate a document's headings,
