--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -178,6 +178,10 @@
         <a href="https://coolblindtech.com/breaking-window-eyes-discontinued-in-the-hands-of-the-vfo-group/">Breaking: Window-eyes discontinued, in the hands of the <abbr>VFO</abbr> Group</a> (03.05.2017).
       </li>
       <li>
+        <a href="https://www.apple.com/accessibility/mac/vision/">Mac: Vision Accessibility</a>:
+        this page introduces VoiceOver, the only screen reader for Mac <abbr>OS</abbr>.
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=vAcYipyXGvc">Word and <abbr>NVDA</abbr> screen reader demonstration</a>,
         <i class="ytchannel">eLaHub</i> on YouTube, 8 minutes, 06.02.2019.
         <br />This video show how screen reader short cuts can be used to navigate a document's headings,
