Add: MS Office Support: Create closed captions for a video

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -426,6 +426,11 @@
         <a href="https://developer.mozilla.org/en-US/docs/Web/Apps/Fundamentals/Audio_and_video_delivery/Adding_captions_and_subtitles_to_HTML5_video">Adding captions and subtitles to <abbr>HTML</abbr>5 video</a>,
         <i class="website"><abbr>MDN</abbr> Web Docs</i>, no date.
       </li>
+      <li>
+        <a href="https://support.office.com/en-us/article/Create-closed-captions-for-a-video-b1cfb30f-5b00-4435-beeb-2a25e115024b">Create closed captions for a video</a>,
+        <i class="website">Microsoft Office Support</i>, no date (accessed 05.12.2019).
+        <br />This article applies to PowerPoint for Office 365 and PowerPoint for Office 365 for Mac.
+      </li>
     </ul>
 
     <p>Tutorials and articles:</p>
