Add: MS Office Support: Record a slide show with narration and slide timings

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -431,6 +431,11 @@
         <i class="website">Microsoft Office Support</i>, no date (accessed 05.12.2019).
         <br />This article applies to PowerPoint for Office 365 and PowerPoint for Office 365 for Mac.
       </li>
+      <li>
+        <a href="https://support.office.com/en-us/article/record-a-slide-show-with-narration-and-slide-timings-0b9502c6-5f6c-40ae-b1e7-e47d8741161c#officeversion=office_365">Record a slide show with narration and slide timings</a>,
+        <i class="website">Microsoft Office Support</i>, no date (accessed 05.12.2019).
+        <br />This article applies to PowerPoint for Office 365 and PowerPoint for Office 365 for Mac.
+      </li>
     </ul>
 
     <p>Tutorials and articles:</p>
