Add: MS Office Support: Microsoft Stream automatically creates closed captions for videos

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -436,6 +436,11 @@
         <i class="website">Microsoft Office Support</i>, no date (accessed 05.12.2019).
         <br />This article applies to PowerPoint for Office 365 and PowerPoint for Office 365 for Mac.
       </li>
+      <li>
+        <a href="https://support.office.com/en-us/article/Microsoft-Stream-automatically-creates-closed-captions-for-videos-8d6ac353-9ff2-4e2b-bca1-329499455308">Microsoft Stream automatically creates closed captions for videos</a>,
+        <i class="website">Microsoft Office Support</i>, no date (accessed 05.12.2019).
+        <br />This article applies to PowerPoint for Office 365 and PowerPoint for Office 365 for Mac.
+      </li>
     </ul>
 
     <p>Tutorials and articles:</p>
