Add: Amboy: Why You Need Audio Descriptions to Make Online Course Videos Accessible

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -523,6 +523,10 @@
         <i class="journal">The Journal of Interactive Technology and Pedagogy</i>, 22.12.2015.
         <!-- @@todo read! -->
       </li>
+      <li>Amboy, Dayna:
+        <a href="https://www.techsmith.com/blog/audio-descriptions-course-videos-accessible/">Why You Need Audio Descriptions to Make Online Course Videos Accessible</a>,
+        <i class="blog">TechSmith Blog</i>, 04.06.2019.
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=EKGOWavFvHc">We're The Superhumans | Rio Paralympics 2016 Trailer</a>:
         audio-described video by Channel 4. (Captions can also be activated.
