Update description of WCAG 2 Quick Reference

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -37,6 +37,8 @@
       <li><a href="crowdsourcing.html" title="Crowdsourcing &amp; Human-Based Computation">Crowdsourcing</a></li>
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
+      <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
+      <li><a href="terminology.html">Terminology</a></li>
     </ul>
   </nav>
 
@@ -69,9 +71,7 @@
           <li><abbr>W3C</abbr>:
             <a href="http://www.w3.org/WAI/WCAG20/quickref/">How to Meet <abbr>WCAG</abbr> 2 (Quick Reference)</a>:
             <q>A customizable quick reference to Web Content Accessibility Guidelines (<abbr>WCAG</abbr>) 2 requirements (success criteria) and techniques.</q>
-            <br />This site allows developers to filter the techniques based on the
-            conformance level and the technologies that apply to the content
-            they are creating.
+            <br />This site allows developers to filter the techniques based on the conformance level and the technologies that apply to the content they are creating.
           </li>
         </ul>
         <br />Articles and blog posts:</li>
