Add: h3: Other Accessibility Standards

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -335,6 +335,27 @@
       WCAG 1.0, German translation: https://w3c.de/Trans/WAI/webinhalt.html
     -->
 
+    <h3>Other Accessibility Standards</h3>
+    <ul>
+      <li><abbr>ISO</abbr> and <abbr>IEC</abbr>:
+        <a href="https://www.iso.org/standard/70913.html"><abbr>ISO</abbr>/<abbr>IEC</abbr> 30071-1:2019: Information technology — Development of user interface accessibility — Part 1: Code of practice for creating accessible <abbr>ICT</abbr> products and services</a>.
+        Below is the standard's abstract:
+        <blockquote>
+          <p>This document takes a holistic approach to the accessibility of information and communications technology (<abbr>ICT</abbr>) by combining guidance on implementing the accessibility of <abbr>ICT</abbr> systems (<abbr>ICT</abbr> accessibility) both at organizational and system development levels.</p>
+          <p>This document gives guidelines for building and maintaining <abbr>ICT</abbr> systems (including products and services) that are accessible to diverse users (including users with disabilities and older people).</p>
+          <p>This document is applicable to all types of organizations. This document applies to the breadth of <abbr>ICT</abbr> systems and the results of convergent and emerging technologies within an organization including, but not limited to:
+          information systems; intranet systems; websites; mobile and wearable applications; social media; and Internet of Things (<abbr>IoT</abbr>) systems.</p>
+          <p>It gives requirements and recommendations for organizations:</p>
+          <ol type="a">
+            <li>ensuring accessibility is considered in their policies or strategy by creating an organizational <abbr>ICT</abbr> accessibility policy;</li>
+            <li>embedding the consideration of accessibility decisions through the entire process of developing procuring, installing, operating and maintaining <abbr>ICT</abbr> systems, and documenting these choices;</li>
+            <li>justifying decisions on accessibility;</li>
+            <li>communicating the <abbr>ICT</abbr> system's accessibility decisions to its users at launch, through creating and publishing its accessibility statement.</li>
+          </ol>
+        </blockquote>
+      </li>
+    </ul>
+
     <h3>Machine-Readable Guideline Representations</h3>
     <p>Representation of the Web Content Accessibility Guidelines (<abbr>WCAG</abbr>) 2.0
       in a machine-processable format:
@@ -366,7 +387,6 @@
         (See the <a href="https://www.w3.org/TR/WCAG20-TECHS/">latest version of Techniques for <abbr>WCAG</abbr> 2.0</a>.)
       </li>
     </ul>
-
     <h3>Guidelines Focusing on Specific Target Groups or Disabilities</h3>
     <ul>
       <li>Aphasia United:
