--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -354,6 +354,15 @@
           </ol>
         </blockquote>
       </li>
+      <li><abbr>ISO</abbr> and <abbr>IEC</abbr>:
+        <a href="https://www.iso.org/standard/45159.html"><abbr>ISO</abbr> and <abbr>IEC</abbr> 29136:2012: Information technology — User interfaces — Accessibility of personal computer hardware</a>.
+        Below is the standard's abstract:
+        <blockquote>
+          <p><abbr>ISO</abbr>/<abbr>IEC</abbr> 29136:2012 provides requirements and recommendations for the accessibility of personal computer hardware, to be used when planning, developing, designing and distributing these computers.
+          While it does not cover the behaviour of, or requirements for, assistive technologies, it does address connectivity of assistive technologies as an integrated component of interactive systems.
+          Some requirements or recommendations in <abbr>ISO</abbr>/<abbr>IEC</abbr> 29136:2012 require software support; however, requirements and recommendations that solely focus on software are not included in <abbr>ISO</abbr>/<abbr>IEC</abbr> 29136:2012.</p>
+        </blockquote>
+      </li>
     </ul>
 
     <h3>Machine-Readable Guideline Representations</h3>
