Add: ISO and IEC: 29138-1:2018: Information technology — User interface accessibility — Part 1: User accessibility needs

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -363,6 +363,30 @@
           Some requirements or recommendations in <abbr>ISO</abbr>/<abbr>IEC</abbr> 29136:2012 require software support; however, requirements and recommendations that solely focus on software are not included in <abbr>ISO</abbr>/<abbr>IEC</abbr> 29136:2012.</p>
         </blockquote>
       </li>
+      <li><abbr>ISO</abbr> and <abbr>IEC</abbr>:
+        <a href="https://www.iso.org/standard/71953.html"><abbr>ISO</abbr>/<abbr>IEC</abbr> 29138-1:2018: Information technology — User interface accessibility — Part 1: User accessibility needs</a>.
+        Below is the standard's abstract:
+        <blockquote>
+          <p>This document identifies a collection of user accessibility needs that diverse users have of <abbr>ICT</abbr> systems to make these systems accessible to them. Each user accessibility need might be required of a system by an individual. Different users can have different sets of user accessibility needs in different contexts.</p>
+          <p>While this set of user accessibility needs was developed for the domain of <abbr>ICT</abbr>, many of the user accessibility needs in this set also apply in other domains.</p>
+          <p>This document does not provide requirements or specific processes and methods for the application and evaluation of user accessibility needs. However, it could inform the development of such requirements (see 5.4).</p>
+          <p>This document is not designed for certification purposes or regulatory or contractual use.</p>
+          <p>The user accessibility needs in this document are intended to inform and encourage those responsible for accessibility to go beyond the minimum provisions of accessibility legislation and regulations.</p>
+        </blockquote>
+      </li>
+      <!--
+        ISO/IEC 13066-1:2011: Information technology — Interoperability with assistive technology (AT) — Part 1: Requirements and recommendations for interoperability
+          https://www.iso.org/standard/53770.html
+        ISO/IEC TR 13066-2:2016: Information technology — Interoperability with assistive technology (AT) — Part 2: Windows accessibility application programming interface (API)
+          https://www.iso.org/standard/65936.html
+        ISO/IEC TR 13066-3:2012: Information technology — Interoperability with assistive technology (AT) — Part 3: IAccessible2 accessibility application programming interface (API)
+          https://www.iso.org/standard/53998.html
+        ISO/IEC TR 13066-4:2015: Information technology — Interoperability with assistive technology (AT) — Part 4: Linux/UNIX graphical environments accessibility API
+          https://www.iso.org/standard/54001.html
+        ISO/IEC TR 13066-6:2014: Information technology — Interoperability with Assistive Technology (AT) — Part 6: Java accessibility application programming interface (API)
+          https://www.iso.org/standard/54004.html
+        @@check other standards by ISO/IEC JTC 1/SC 25: https://www.iso.org/committee/45382/x/catalogue/p/1/u/0/w/0/d/0
+      -->
     </ul>
 
     <h3>Machine-Readable Guideline Representations</h3>
@@ -396,6 +420,7 @@
         (See the <a href="https://www.w3.org/TR/WCAG20-TECHS/">latest version of Techniques for <abbr>WCAG</abbr> 2.0</a>.)
       </li>
     </ul>
+
     <h3>Guidelines Focusing on Specific Target Groups or Disabilities</h3>
     <ul>
       <li>Aphasia United:
