Add: WCAG Issue #770: Deprecating SC 4.1.1

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -348,6 +348,10 @@
         <a href="https://github.com/w3c/wcag/issues/542"><abbr>WCAG</abbr> Issue #542: 4.1.1 Parsing - Duplicate attributes with no user impact cause a conformance failure</a>:
         submitted on GitHub in November 2018 and closed on 6 June 2019.
       </li>
+      <li>
+        <a href="https://github.com/w3c/wcag/issues/770"><abbr>WCAG</abbr> Issue #770: Deprecating <abbr>SC</abbr> 4.1.1</a>:
+        submitted on GitHub in June 2019. The discussion on the previous issue is continued here.
+      </li>
     </ul>
 
     <h3>Other Accessibility Standards</h3>
