Add: WAI-GL list: 4.1.1 depreciation discussion

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -352,6 +352,10 @@
         <a href="https://github.com/w3c/wcag/issues/770"><abbr>WCAG</abbr> Issue #770: Deprecating <abbr>SC</abbr> 4.1.1</a>:
         submitted on GitHub in June 2019. The discussion on the previous issue is continued here.
       </li>
+      <li>
+        <a href="https://lists.w3.org/Archives/Public/w3c-wai-gl/2019JulSep/0213.html">4.1.1 depreciation discussion</a>:
+        discussion thread on the <abbr title="Accessibility Guidelines Working Group">AGWG</abbr>'s mailing list, started on 20.09.2019.
+      </li>
     </ul>
 
     <h3>Other Accessibility Standards</h3>
