--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -356,6 +356,10 @@
         <a href="https://lists.w3.org/Archives/Public/w3c-wai-gl/2019JulSep/0213.html">4.1.1 depreciation discussion</a>:
         discussion thread on the <abbr title="Accessibility Guidelines Working Group">AGWG</abbr>'s mailing list, started on 20.09.2019.
       </li>
+      <li>
+        <a href="https://lists.w3.org/Archives/Public/w3c-wai-ig/2019JanMar/0015.html">Re: <abbr>SC</abbr> 4.1.1 source fails but DOM passes - must a page fail?</a>
+        Sent to the <abbr title="Web Accessibility Initiative Interest Group">WAI-IG</abbr> mailing list on 11.01.2019.
+      </li>
     </ul>
 
     <h3>Other Accessibility Standards</h3>
