--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -360,6 +360,10 @@
         <a href="https://lists.w3.org/Archives/Public/w3c-wai-ig/2019JanMar/0015.html">Re: <abbr>SC</abbr> 4.1.1 source fails but DOM passes - must a page fail?</a>
         Sent to the <abbr title="Web Accessibility Initiative Interest Group">WAI-IG</abbr> mailing list on 11.01.2019.
       </li>
+      <li>
+        <a href="https://lists.w3.org/Archives/Public/w3c-wai-ig/2019OctDec/0113.html">correct syntax versus content models according to <abbr>SC</abbr> 4.1.1 (Re: &lt;ol start="3"&gt; Is this accessible?)</a>
+        Sent to the <abbr>WAI-IG</abbr> mailing list on 27.11.2019.
+      </li>
     </ul>
 
     <h3>Other Accessibility Standards</h3>
