Add: IBM: IBM Accessibility Checklist

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -490,6 +490,10 @@
         <a href="https://www.w3.org/TR/wcag2ict/">Guidance on Applying WCAG 2.0 to Non-Web Information and Communications Technologies (<abbr>WCAG2ICT</abbr>)</a>:
         <abbr>W3C</abbr> Working Group Note 5 September 2013.
       </li>
+      <li><abbr>IBM</abbr> Corporation:
+        <a href="https://www.ibm.com/able/guidelines/ci162/accessibility_checklist.html"><abbr>IBM</abbr> Accessibility Checklist</a>.
+        Version 7.1 of this checklist was released on 23.06.2019.
+      </li>
     </ul>
 
     <h2>Introductions to Accessibility</h2>
