Add: MS: Accessibility Insights for Web

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -629,6 +629,21 @@
           -->
         </ul>
       </li>
+      <li>
+        <a href="https://accessibilityinsights.io/docs/en/web/overview">Accessibility Insights for Web: Overview</a>.
+        This tool was developed by Microsoft.
+        <ul>
+          <li>Lahoti, Sugandha:
+            <a href="https://hub.packtpub.com/microsoft-open-sources-accessibility-insights-for-web-a-chrome-extension-to-help-web-developers-fix-their-accessibility-issues/">Microsoft open sources ‘Accessibility Insights for Web’, a chrome extension to help web developers fix their accessibility issues</a>,
+            <i class="website">Packt Hub</i>, 14.03.2019.
+          </li>
+          <li>
+            <a href="https://chrome.google.com/webstore/detail/accessibility-insights-fo/pbjjkligggfmakdaogkfomddhfmpjeni">Accessibility Insights for Web</a>
+            in the Google Chrome Store.
+            (There is no Firefox add-on.)
+          </li>
+        </ul>
+      </li>
       <!--
       <li>
         <a href=""></a>
