Add: totally (Khan Academy)

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -644,6 +644,10 @@
           </li>
         </ul>
       </li>
+      <li>
+        <a href="https://khan.github.io/tota11y/">tota11y – an accessibility visualization toolkit</a>:
+        a tool developed by Khan Academy.
+      </li>
       <!--
       <li>
         <a href=""></a>
