--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -648,6 +648,16 @@
         <a href="https://khan.github.io/tota11y/">tota11y – an accessibility visualization toolkit</a>:
         a tool developed by Khan Academy.
       </li>
+      <li>headingsMap:
+        <ul>
+          <li>
+            <a href="https://addons.mozilla.org/en-GB/firefox/addon/headingsmap/">headingsMap (Firefox add-on)</a>.
+          </li>
+          <li>
+            <a href="https://chrome.google.com/webstore/detail/headingsmap/flbjommegcjonpdmenkdiocclhjacmbi?hl=en">headingsMap (Chrome extension)</a>.
+          </li>
+        </ul>
+      </li>
       <!--
       <li>
         <a href=""></a>
