--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -36,6 +36,8 @@
       <li><a href="crowdsourcing.html" title="Crowdsourcing &amp; Human-Based Computation">Crowdsourcing</a></li>
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
+      <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
+      <li><a href="terminology.html">Terminology</a></li>
     </ul>
   </nav>
 
@@ -148,11 +150,6 @@
       </li>
       <li>Paciello Group:
         <a href="http://files.paciellogroup.com/customers/WF/COOKBOOK2/rolestate/date-range-pickers/index.html">Date and Date Range Pickers</a>.
-      </li>
-      <li>Syncfusion:
-        <a href="http://ej2.syncfusion.com/15.4.17/angular/documentation/index.html">Essential JS 2 for Angular</a>:
-        <q>a collection modern TypeScript based true Angular Components</q>.
-        The documentation has a section on <a href="http://ej2.syncfusion.com/15.4.17/angular/documentation/base/accessibility.html">Accessibility</a>.
       </li>
       <li>Adobe Accessibility:
         <a href="https://github.com/adobe-accessibility/Accessible-Mega-Menu/">Accessible Mega Menu</a>:
@@ -352,11 +349,21 @@
         <i class="blog">Ember.js blog</i>, 17.06.2018.
       </li>
     </ul>
+
+    <p>Angular and accessibility:</p>
+    <ul>
+      <li>Syncfusion:
+        <a href="http://ej2.syncfusion.com/15.4.17/angular/documentation/index.html">Essential JS 2 for Angular</a>:
+        <q>a collection modern TypeScript based true Angular Components</q>.
+        The documentation has a section on <a href="http://ej2.syncfusion.com/15.4.17/angular/documentation/base/accessibility.html">Accessibility</a>.
+      </li>
+    </ul>
     <!-- CSS layouts & accessibility?
       * CSS flexbox @ HTML5 Please: http://html5please.com/#flexbox 
         * Chris Coyier: "A Complete Guide to Flexbox", CSS-Tricks, 3 November 2015: https://css-tricks.com/snippets/css/a-guide-to-flexbox/ 
         * Greg Smith: "Dive into Flexbox", bocoup, 13 December 2012: https://bocoup.com/weblog/dive-into-flexbox 
         * "Using CSS flexible boxes", Mozilla Developer Network: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Using_CSS_flexible_boxes 
+        * Rachel Andrew: "Flexbox: How Big Is That Flexible Box?" 13-minute read, Smashing Magazine, 17.09.2018: https://www.smashingmagazine.com/2018/09/flexbox-sizing-flexible-box/
       * Jeremy Keith: "Strong Layout Systems by Eric Meyer", 18 February 2013: http://adactio.com/journal/6049 
       * Stephen Hay: articles in the category "layout": http://www.the-haystack.com/category/layout/ 
       * Trent Walton: "Flexible Foundations", 7 January 2013: http://trentwalton.com/2013/01/07/flexible-foundations/ 
