Add: Garaventa: ARIA Widget Checklist: For Screen Reader Testing

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -265,6 +265,10 @@
         <br />See also
         <a href="http://whatsock.com/training/">The Accessibility Tree: A Training Guide for Advanced Web Development</a>.
       </li>
+      <li>Garaventa, Bryan:
+        <a href="https://www.levelaccess.com/aria-widget-checklist-screen-reader-testing/"><abbr>ARIA</abbr> Widget Checklist: For Screen Reader Testing</a>,
+        <i class="website">Level Access</i>, 24.02.2017.
+      </li>
       <li>Pickering, Heydon:
         <a class="booktitle" href="https://store.kobobooks.com/en-US/ebook/apps-for-all-coding-accessible-web-applications">Apps For All: Coding Accessible Web Applications</a>,
         e-book published by Kobo (2014).
