Add details about Web Accessibility Directive

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -423,6 +423,9 @@
         (This is the &ldquo;Web Accessibility Directive&rdquo;.
         <a href="http://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32016L2102">Directive (<abbr>EU</abbr>) 2016/2102 of the European Parliament and of the Council of 26 October 2016 on the accessibility of the websites and mobile applications of public sector bodies</a>:
         version without the language picker.)
+        <br />The directive's preamble (but not its body) contains the following paragraph related to procurement:
+        <q>(21) This Directive is without prejudice to Directive 2014/24/<abbr>EU</abbr> of the European Parliament and of the Council (6) and in particular Article 42 thereof, and Directive 2014/25/<abbr>EU</abbr> of the European Parliament and of the Council (7) and in particular Article 60 thereof,
+        which require that the technical specifications for all procurements which are intended for use by natural persons, whether the general public or staff of the contracting authority, shall, except in duly justified cases, be drawn up so as to take into account accessibility criteria for persons with disabilities or design for all users.</q>
       </li>
       <li>Sethfors, Hampus:
         <a href="https://axesslab.com/web-accessibility-directive/">Web Accessibility Directive – What it is and how to comply</a>,
